--- a/src/MauiDevToolbox.App/App.xaml
+++ b/src/MauiDevToolbox.App/App.xaml
@@ -2,7 +2,7 @@
 <Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:MauiDevToolbox.App"
-             x:Class="MauiDevToolbox.App.App">
+             x:Class="Monbsoft.MauiDevToolbox.App.App">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
